Fix: css fab z-index

--- a/client/src/components/shared/speechBubble/components/index.module.css
+++ b/client/src/components/shared/speechBubble/components/index.module.css
@@ -27,6 +27,7 @@
 
 .fab {
     right: 10px !important;
+    z-index: 1 !important;
     position: absolute !important;
     bottom: 25px !important;
     width: 35px !important;
@@ -64,7 +65,9 @@
 
 .speech_container {
     padding: 16px;
-    width: 95%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .details {
